lab-openshift/openshift/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
spec:
  to:
    kind: Service
    name: backend
  port:
    targetPort: 5000
  tls:
    termination: edge
  wildcardPolicy: None
